chore : public에 대한 절대경로 설정 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,13 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "public/*": ["./public/*"]
+      // public 절대경로 설정 추가
     },
-    "checkJs": true
+
+    "checkJs": true,
+    "strictNullChecks": true
   },
   "include": [
     "next-env.d.ts",
