--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "@svgr/webpack": "^8.1.0",
     "date-fns": "^3.6.0",
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-range": "^1.8.14",
+    "react-redux": "^9.1.2",
     "swiper": "^11.1.3"
   },
   "devDependencies": {
