--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     },
 
     "checkJs": true,
-    "strictNullChecks": true
+    "strictNullChecks": false
   },
   "include": [
     "next-env.d.ts",
